######### 2014-5-12 ##########
alter table shop_trades_mergetrade add column qrcode_msg varchar(32) NOT NULL;
######### 2014-5-10 ##########
alter table shop_users_user add column user_code varchar(16) NOT NULL;
######### 2014-5-9 ##########
alter table shop_yunda_ppw change weight weight double NOT NULL;
alter table shop_yunda_ppw change upload_weight upload_weight double NOT NULL;
alter table shop_yunda_tspw change weight weight double NOT NULL;
alter table shop_yunda_tspw change upload_weight upload_weight double NOT NULL;
alter table shop_yunda_tppw change weight weight double NOT NULL;
alter table shop_yunda_tppw change upload_weight upload_weight double NOT NULL;
######### 2014-5-5 ##########
alter table shop_yunda_order add yd_customer_id int(11);
ALTER TABLE shop_yunda_order ADD FOREIGN KEY (`yd_customer_id`) REFERENCES shop_yunda_customer(`id`);
######### 2014-4-25 ##########
alter table shop_yunda_order add column is_jzhw tinyint(1) NOT NULL;
######### 2014-4-24 ##########
alter table shop_yunda_order add column parent_package_id varchar(64) NOT NULL;
create index shop_yunda_order_parent_package_id on shop_yunda_order(parent_package_id);
alter table shop_yunda_order add column upload_weight varchar(10) NOT NULL;
alter table shop_yunda_order add column uploaded datetime DEFAULT NULL;
alter table shop_yunda_order add column weighted datetime DEFAULT NULL;

alter table shop_yunda_order drop index cus_oid;
alter table shop_yunda_order add unique key (out_sid);
######### 2014-4-12 ##########
alter table shop_categorys_productcategory change parent_cid parent_cid int(11) NOT NULL;
######### 2014-4-11 ##########
alter table shop_items_productlocation add column product_id int(11) NOT NULL;
alter table shop_items_productlocation add column sku_id int(11);
alter table shop_items_productlocation drop index outer_id;
alter table shop_items_productlocation add unique key (product_id,sku_id,district_id);
######### 2014-3-27 ##########