@@ -1,3 +1,7 @@
+######### 2014-5-22 ##########
+alter table shop_yunda_customer add column company_trade varchar(32) NOT NULL;
+alter table shop_yunda_customer add column reserveo varchar(64) NOT NULL;
+alter table shop_yunda_customer add column reservet varchar(64) NOT NULL;
 ######### 2014-5-12 ##########
 alter table shop_trades_mergetrade add column qrcode_msg varchar(32) NOT NULL;
 ######### 2014-5-10 ##########
